<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_language"
        android:textStyle="bold"
        android:fontFamily="@font/gabarito_semibold"
        android:textSize="18sp"
        android:gravity="center"
        android:paddingBottom="16dp" />

    <RadioGroup
        android:id="@+id/radioGroupLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rbEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gabarito_reguler"
            android:text="@string/english_en" />

        <RadioButton
            android:id="@+id/rbIndonesian"
            android:fontFamily="@font/gabarito_reguler"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indonesian_id" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:fontFamily="@font/gabarito_semibold"
        android:backgroundTint="@color/green"
        android:textColor="@color/white"
        android:layout_marginTop="16dp" />
</LinearLayout>
