<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.main.predict.FormPredictActivity">

    <!-- AppBar with Toolbar -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/predict_manual"
            app:titleTextAppearance="@style/ToolbarTextStyle"
            app:titleTextColor="@color/black"
            app:navigationIconTint="@color/black"
            app:navigationIcon="?attr/homeAsUpIndicator" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:fillViewport="true"
        tools:context=".ui.main.predict.FormPredictFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <!-- Nitrogen -->
            <TextView
                android:id="@+id/tvNitrogen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/nitrogen_n"
                android:fontFamily="@font/gabarito_reguler"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nitrogenInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:shapeAppearanceOverlay="@style/TextInputLayoutRounded"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:hintEnabled="false"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNitrogen"
                    android:fontFamily="@font/gabarito_reguler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_nitrogen_value"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Phosphorus -->
            <TextView
                android:id="@+id/tvPhosphorus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/phosphorus_p"
                android:fontFamily="@font/gabarito_reguler"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phosphorusInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:shapeAppearanceOverlay="@style/TextInputLayoutRounded"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:hintEnabled="false"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhosphorus"
                    android:fontFamily="@font/gabarito_reguler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_phosphorus_value"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Potassium -->
            <TextView
                android:id="@+id/tvPotassium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/gabarito_reguler"
                android:text="@string/potassium_k"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/potassiumInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:shapeAppearanceOverlay="@style/TextInputLayoutRounded"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:hintEnabled="false"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPotassium"
                    android:fontFamily="@font/gabarito_reguler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_potassium_value"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Temperature -->
            <TextView
                android:id="@+id/tvTemperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/gabarito_reguler"
                android:text="@string/temperature_c"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/temperatureInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:shapeAppearanceOverlay="@style/TextInputLayoutRounded"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:hintEnabled="false"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTemperature"
                    android:fontFamily="@font/gabarito_reguler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_temperature_value"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Humidity -->
            <TextView
                android:id="@+id/tvHumidity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/gabarito_reguler"
                android:text="@string/humidity"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/humidityInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:shapeAppearanceOverlay="@style/TextInputLayoutRounded"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:hintEnabled="false"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etHumidity"
                    android:fontFamily="@font/gabarito_reguler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_humidity_value"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- pH -->
            <TextView
                android:id="@+id/tvPH"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/ph"
                android:fontFamily="@font/gabarito_reguler"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:shapeAppearanceOverlay="@style/TextInputLayoutRounded"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:hintEnabled="false"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPH"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_ph_value"
                    android:fontFamily="@font/gabarito_reguler"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Rainfall -->
            <TextView
                android:id="@+id/tvRainfall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/rainfall_mm"
                android:fontFamily="@font/gabarito_reguler"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rainfallInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:shapeAppearanceOverlay="@style/TextInputLayoutRounded"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:hintEnabled="false"
                android:layout_marginBottom="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRainfall"
                    android:fontFamily="@font/gabarito_reguler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_rainfall_value"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Predict Button -->
            <FrameLayout
                android:id="@+id/buttonContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp">

                <Button
                    android:id="@+id/btnPredict"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gabarito_semibold"
                    android:text="@string/predict" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:indicatorSize="24dp"
                    android:indeterminate="true"
                    android:layout_gravity="center"
                    tools:visibility="visible"
                    android:visibility="gone" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
