<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvLogoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_log_out"
        android:fontFamily="@font/gabarito_semibold"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:paddingBottom="16dp" />

    <!-- Tombol Logout -->
    <Button
        android:id="@+id/btnConfirmLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:textColor="@color/white"
        android:fontFamily="@font/gabarito_semibold"
        android:text="@string/logout"
        android:layout_marginBottom="8dp" />

    <!-- Tombol Cancel -->
    <Button
        android:id="@+id/btnCancel"
        style="?attr/materialButtonOutlinedStyle"
        app:strokeColor="@color/green"
        android:fontFamily="@font/gabarito_semibold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

</LinearLayout>
